# asd-twin-research

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: README.md  data_generation.py  environmental.csv  synthetic_cohort.csv
docs/: ethics.md  limitations.md  methodology.md  osf_preregistration.md
notebooks/: 01_data_exploration.qmd  02_baseline_models.qmd  03_butterfly_effects.qmd  04_twin_validation.qmd
prototypes/: README.md
prototypes/aura_platform/: aura_platform.jsx  index.html  package.json
prototypes/aura_platform/src/: App.jsx
prototypes/research_tool/: .gitignore  beyond_the_session.jsx  index.html  package.json  research_dashboard.jsx
prototypes/research_tool/src/: App.jsx
src/: __init__.py
src/analysis/: __init__.py  environmental.py  reliability.py
src/twin/: __init__.py  prediction.py
tests/: test_pipeline.py
